v5.1.8
- Removed - Base input styles - we use Bootstrap so let's stick to that
- Updated - Comment Walker and template - prepare block-views structure for upcomming comments query
- Updated - Post meta block-views structure changed
- Fixed - Header pattern navigation attribute for overlay/offcanvas

v5.1.7
- Removed - FSE class used to hide/show Customizer/Site editor links in admin
- Updated - Enable FSE Admin link by default with developer mode control (to easily disable, eg: production)
- Updated - Add rel home to home-link block
- Updated - Starter content page templates to default page / add back filter for starter content meta
- Updated - New navigation offcanvas option (off/mobile/allways)
- Fixed - File block wrapped into Dynamic's CLASS save_html method (for valid markup)
- Fixed - Query Pagination numbers WP_Query namespacing fatal error and template part HTML
- Fixed - Media / Text image fill generated styles
- Fixed - Admin welcome screen vars
- Added - Letter Spacing style generation from block attributes
- Added - Filter pagination arguments with 'wecodeart/filter/query/pagination/args'

v5.1.6
- Updated - Theme starter content (due to cover updates in Gutenberg plugin)
- Fixed - Added back theme support for custom-logo (to be managed in WP Customizer as well + starter content logo fails to be set )
- Fixed - Social links in header.html (block template part)
- Removed - Theme page meta set in starter content
- Removed - Google Fonts license mention in style.css (was removed in FSE theme update 5.0)

v5.1.5
- Updated - Spacer GB block styles + CSS var to reduce height on bellow "lg" breakpoint
- Updated - Theme description and missing feature tags + RO translation files
- Updated - Clear more redundant CSS (comment reply, textarea) in favor of BS Classes
- Updated - Blocks inline CSS variables naming (old to new --wp-- prefix)
- Updated - Duotones filter ids prefixed with "wp-duotone" (to fix a HTML Validation warning)