@@ -1,1 +1,5 @@
-<!-- wp:post-content /-->
+<!-- wp:group {"tagName":"main"} -->
+<main class="wp-block-group">
+    <!-- wp:post-content /-->
+</main>
+<!-- /wp:group -->
